manifests/ingress/todomaster-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todomaster
  namespace: todomaster
spec:
  ingressClassName: nginx
  rules:
    - host: todomaster.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
